--- a/css/styles.css
+++ b/css/styles.css
@@ -740,6 +740,33 @@ ul {
     fill: #FFFFFF;
 }
 
+.form-footer {
+    margin-left: 93px;
+}
+
+.form-footer-title {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+}
+
+.footer-input {
+    width: 358px;
+    height: 50px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 15px;
+}
+
 .backdrop {
     width: 100%;
     height: 100%;
@@ -779,6 +806,7 @@ ul {
     letter-spacing: 0.03em;
 
     margin-bottom: 12px;
+    margin-top: 0;
     color: #212121;
 }
 
@@ -802,6 +830,13 @@ ul {
     margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+    border: 1px solid #2196F3;
 }
 
 .button-modal-submit {
@@ -826,6 +861,12 @@ ul {
     color: #FFFFFF;
 }
 
+.comment {
+    min-height: 120px;
+    padding: 16px 12px;
+    
+}
+
 .modal-close {
     width: 30px;
     height: 30px;
@@ -839,6 +880,11 @@ ul {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    fill: #2196F3;
 }
 
 .is-hidden {
