--- a/css/styles.css
+++ b/css/styles.css
@@ -746,14 +746,14 @@ ul {
 
 .form-footer-title {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 
-color: #FFFFFF;
+    color: #FFFFFF;
 }
 
 .footer-input {
@@ -765,6 +765,7 @@ color: #FFFFFF;
     border-radius: 4px;
     background-color: transparent;
     padding: 15px;
+    color: #ffffff;
 }
 
 .backdrop {
@@ -810,7 +811,12 @@ color: #FFFFFF;
     color: #212121;
 }
 
-.modal-form-title {
+.modal-field {
+    margin-bottom: 10px;
+    
+}
+
+.modal-lable-title {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -818,25 +824,94 @@ color: #FFFFFF;
     line-height: 1.17;
     /* identical to box height */
     letter-spacing: 0.01em;
-
     margin-bottom: 4px;
     color: #757575;
+    display: block;
 }
 
+.modal-wrap {
+    position: relative;
+
+}
 
 .modal-input {
     width: 100%;
     height: 40px;
-    margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding-right: 15px;
-    padding-left: 15px;
+    padding-left: 42px;
+    color: #212121;
+    font-size: 14px;
+    outline: transparent;
+
+    transition: border 250ms linear;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .modal-input:hover,
 .modal-input:focus {
     border: 1px solid #2196F3;
+}
+
+.modal-input:hover + .modal-input-icon,
+.modal-input:focus + .modal-input-icon {
+    fill: #2196F3;
+}
+
+.modal-input-icon {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+
+    transition: fill 250ms linear;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+.modal-comment-text {
+    width: 100%;
+    min-height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: transparent;
+    padding: 12px 16px;
+    resize: none;
+
+    transition:border 250ms linear;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.modal-comment-text:hover,
+.modal-comment-text:focus {
+    border: 1px solid #2196F3;
+    
+}
+
+.modal-input-check {
+
+}
+
+.modal-input-check:checked {
+    
+}
+
+.modal-check-text {
+    display: flex;
+    text-align: center;
+
+    font-size: 14px;
+
+
+    color: #757575;
+}
+
+.modal-check-text::before {
+    content: '';
+    width: 16px;
+    height: 15px;
+    border: 2px solid #212121;
+    border-radius: 3px;
+    margin-right: 8px;
 }
 
 .button-modal-submit {
@@ -861,11 +936,6 @@ color: #FFFFFF;
     color: #FFFFFF;
 }
 
-.comment {
-    min-height: 120px;
-    padding: 16px 12px;
-    
-}
 
 .modal-close {
     width: 30px;
@@ -880,6 +950,9 @@ color: #FFFFFF;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+
+    transition: fill 250ms linear;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .modal-close:hover,
