--- a/css/styles.css
+++ b/css/styles.css
@@ -769,6 +769,10 @@ ul {
     color: #FFFFFF;
 }
 
+.footer-online-form {
+    display: flex;
+}
+
 .footer-input {
     width: 358px;
     height: 50px;
@@ -779,6 +783,44 @@ ul {
     background-color: transparent;
     padding: 15px;
     color: #ffffff;
+    margin-right: 12px;
+}
+
+.footer-button-wrap {
+    position: relative;
+}
+
+.footer-button-submit {
+    display: inline-block;
+    background: #2196F3;
+    border-radius: 4px;
+    outline: none;
+    width: 200px;
+    height: 50px;
+    text-decoration: none;
+    padding-left: 28px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    /* identical to box height, or 188% */
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+
+.footer-button-icon {
+    position: absolute;
+    left: 148px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #FFFFFF;
 }
 
 .backdrop {
@@ -826,7 +868,6 @@ ul {
 
 .modal-field {
     margin-bottom: 10px;
-    
 }
 
 .modal-lable-title {
@@ -892,6 +933,15 @@ ul {
 
     transition:border 250ms linear;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+
+    color: #212121;
 }
 
 .modal-comment-text:hover,
@@ -917,8 +967,16 @@ ul {
 .modal-check-text {
     display: flex;
     text-align: center;
-    font-size: 14px;
-    color: #757575;
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.17;
+/* identical to box height, or 171% */
+letter-spacing: 0.03em;
+
+color: #757575;
+    margin-top: 20px;
 }
 
 .modal-check-text span {
@@ -934,15 +992,6 @@ ul {
     margin-right: 8px;
 }
 
-/* .modal-check-text::before {
-    content: '';
-    width: 16px;
-    height: 15px;
-    border: 2px solid #212121;
-    border-radius: 3px;
-    margin-right: 8px;
-} */
-
 .button-modal-submit {
     display: inline-block;
     background-color: #2196F3;
@@ -950,6 +999,9 @@ ul {
     border-radius: 4px;
     padding: 10px 52px;
     text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -964,6 +1016,7 @@ ul {
 
     color: #FFFFFF;
 }
+
 
 
 .modal-close {
